--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"updateInfo": "tsc ./tools/syncInfo.ts --target esnext --module esnext && node ./tools/syncInfo.js",
+		"updateInfo": "tsc ./tools/syncInfo.ts --target esnext --module nodenext && node ./tools/syncInfo.js",
 		"lint": "eslint --ext .ts . --fix && prettier --write ."
 	},
 	"repository": {
