--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"updateInfo": "tsc ./tools/syncInfo.ts --target esnext --module nodenext && node ./tools/syncInfo.js",
-		"lint": "eslint --ext .ts . --fix && prettier --write ."
+		"lint": "npx eslint --ext .ts . --fix && npx prettier --write ."
 	},
 	"repository": {
 		"type": "git",
