--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "simple-blog-builder",
+	"name": "@simple-blog-builder/core",
 	"version": "0.0.1",
-	"description": "A component library to build up fast blogs with markdown files",
-	"main": "index.js",
+	"description": "A component library to build up fast blogs with markdown files. This is the core package, which contains the logic to parse and render the markdown files.",
+	"main": "index.ts",
 	"type": "module",
 	"directories": {
 		"test": "test"
@@ -15,7 +15,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/JosunLP/simple-blog-builder.git"
+		"url": "git+https://github.com/simple-blog-builder/core.git"
 	},
 	"keywords": [
 		"npm",
@@ -32,15 +32,10 @@
 	},
 	"license": "MIT",
 	"bugs": {
-		"url": "https://github.com/JosunLP/simple-blog-builder/issues"
+		"url": "https://github.com/simple-blog-builder/core/issues"
 	},
-	"homepage": "https://github.com/JosunLP/simple-blog-builder#readme",
+	"homepage": "https://github.com/simple-blog-builder/core#readme",
 	"devDependencies": {
-		"@storybook/angular": "^8.0.0",
-		"@storybook/react": "^8.0.0",
-		"@storybook/svelte": "^8.0.0",
-		"@storybook/vue": "^7.6.17",
-		"@storybook/web-components": "^8.0.0",
 		"@types/aes-js": "^3.1.1",
 		"@types/node": "^18.0.6",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
