--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
 	"name": "@simple-blog-builder/core",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "A component library to build up fast blogs with markdown files. This is the core package, which contains the logic to parse and render the markdown files.",
-	"main": "index.ts",
+	"main": "./src/index.ts",
 	"type": "module",
 	"directories": {
 		"test": "test"
 	},
 	"scripts": {
-		"build": "npx rimraf ./dist/ && npm run updateInfo && npm run lint && npm run build/core",
+		"build": "npm ci && npx rimraf ./dist/ && npm run updateInfo && npm run lint && npm run build/core",
 		"build/core": "tsc -p tsconfig.json",
 		"updateInfo": "tsc ./tools/syncInfo.ts --outDir ./tools/ --target esnext --module nodenext && node ./tools/syncInfo.js",
-		"lint": "npx eslint --ext .ts . --fix"
+		"lint": "npx eslint --ext .ts . --fix",
+		"release": "npm run build && npm version patch && npm publish --access public"
 	},
 	"repository": {
 		"type": "git",
