--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"build/core": "tsc -p tsconfig.json",
 		"updateInfo": "tsc ./tools/syncInfo.ts --outDir ./tools/ --target esnext --module nodenext && node ./tools/syncInfo.js",
 		"lint": "npx eslint --ext .ts . --fix",
-		"release": "npm run build && npm version patch && npm publish --access public"
+		"release": "npm run build && npm publish --access public"
 	},
 	"repository": {
 		"type": "git",
